[gd_scene load_steps=23 format=2]

[ext_resource path="res://Scenes/world.gd" type="Script" id=1]
[ext_resource path="res://Scripts/mapPivotPoint.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Map_Body.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Tile_Map.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Ball.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Area2D.gd" type="Script" id=6]
[ext_resource path="res://Assets/Sprites/Ball/NormalBall.png" type="Texture" id=7]
[ext_resource path="res://Assets/Controls/Ingame/Right_Arrow_Default.png" type="Texture" id=8]
[ext_resource path="res://Assets/Controls/Ingame/Right_Arrow_Pressed.png" type="Texture" id=9]
[ext_resource path="res://Assets/Controls/Ingame/Left_Arrow_Default.png" type="Texture" id=10]
[ext_resource path="res://Assets/Controls/Ingame/Left_Arrow_Pressed.png" type="Texture" id=11]
[ext_resource path="res://Assets/Controls/Pause/Pause_Default.png" type="Texture" id=12]
[ext_resource path="res://Assets/Controls/Pause/Pause_Pressed.png" type="Texture" id=13]
[ext_resource path="res://Assets/Controls/Pause/Resume_Default.png" type="Texture" id=14]
[ext_resource path="res://Assets/Controls/Pause/Quit_Default.png" type="Texture" id=15]
[ext_resource path="res://Assets/Controls/Pause/Quit_Pressed.png" type="Texture" id=16]
[ext_resource path="res://Assets/Controls/Pause/Frame/grey_frame.png" type="Texture" id=17]
[ext_resource path="res://Scenes/Settings.tscn" type="PackedScene" id=18]
[ext_resource path="res://Assets/Controls/Game_Over/Restart_Default.png" type="Texture" id=19]
[ext_resource path="res://Assets/Controls/Game_Over/Restart_Pressed.png" type="Texture" id=20]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 17.0294

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 16.0

[node name="generic_level" type="Node2D"]

script = ExtResource( 1 )
_sections_unfolded = [ "Pause" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Map_Pivot_Point" type="Position2D" parent="." index="0"]

z_index = -4
script = ExtResource( 2 )
_sections_unfolded = [ "Transform", "Z Index" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Map_Body" type="KinematicBody2D" parent="Map_Pivot_Point" index="0"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 3 )
_sections_unfolded = [ "Pickable", "Visibility", "Z Index" ]
__meta__ = {
"_edit_lock_": true
}

[node name="TileMap" type="Node2D" parent="Map_Pivot_Point/Map_Body" index="0"]

_sections_unfolded = [ "Z Index" ]

[node name="Colliding_TileMap" type="TileMap" parent="Map_Pivot_Point/Map_Body/TileMap" index="0"]

z_index = -1
mode = 0
tile_set = null
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 0, 0, 0, 0, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray(  )
script = ExtResource( 4 )
_sections_unfolded = [ "Cell", "Transform", "Z Index" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Background_TileMap" type="TileMap" parent="Map_Pivot_Point/Map_Body/TileMap" index="1"]

z_index = -2
mode = 0
tile_set = null
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray(  )
_sections_unfolded = [ "Cell", "Visibility", "Z Index" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Enemys" type="Node2D" parent="Map_Pivot_Point/Map_Body" index="1"]

[node name="Ball" type="StaticBody2D" parent="." index="1"]

z_index = -3
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script = ExtResource( 5 )
_sections_unfolded = [ "Collision", "Pause", "Pickable", "Visibility", "Z Index" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Area2D" type="Area2D" parent="Ball" index="0" groups=[
"ball",
]]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball/Area2D" index="0"]

shape = SubResource( 1 )

[node name="Ball_Collision" type="CollisionShape2D" parent="Ball" index="1"]

shape = SubResource( 2 )
_sections_unfolded = [ "Pause" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Ball_Sprite" type="Sprite" parent="Ball" index="2"]

texture = ExtResource( 7 )
_sections_unfolded = [ "Offset" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Controls" type="Node2D" parent="." index="2"]

z_index = -2
_sections_unfolded = [ "Z Index" ]

[node name="Right_Arrow" type="TextureButton" parent="Controls" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 304.0
margin_top = 128.0
margin_right = 464.0
margin_bottom = 258.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
_sections_unfolded = [ "Margin", "Textures" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Left_Arrow" type="TextureButton" parent="Controls" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 16.0
margin_top = 128.0
margin_right = 176.0
margin_bottom = 258.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 11 )
_sections_unfolded = [ "Textures" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Pause_Button" type="TextureButton" parent="Controls" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 440.0
margin_right = 480.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )
_sections_unfolded = [ "Textures" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Pause_Popup" type="Popup" parent="." index="3"]

pause_mode = 2
editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
_sections_unfolded = [ "Pause" ]

[node name="Controls" type="Control" parent="Pause_Popup" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Resume" type="TextureButton" parent="Pause_Popup/Controls" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 161.0
margin_top = 80.0
margin_right = 318.0
margin_bottom = 141.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 14 )
_sections_unfolded = [ "Rect", "Textures" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Quit" type="TextureButton" parent="Pause_Popup/Controls" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 160.0
margin_top = 144.0
margin_right = 319.0
margin_bottom = 175.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 16 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="Pause_menu" type="Sprite" parent="Pause_Popup" index="1"]

position = Vector2( 240, 135 )
z_index = -1
z_as_relative = false
texture = ExtResource( 17 )
_sections_unfolded = [ "Transform", "Z Index" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Settings" parent="Pause_Popup" index="2" instance=ExtResource( 18 )]

[node name="Game_Over_Popup" type="Popup" parent="." index="4"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false

[node name="Sprite" type="Sprite" parent="Game_Over_Popup" index="0"]

position = Vector2( 242, 137 )
texture = ExtResource( 17 )

[node name="Replay" type="TextureButton" parent="Game_Over_Popup" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 159.0
margin_top = 89.0
margin_right = 318.0
margin_bottom = 129.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 20 )
_sections_unfolded = [ "Textures" ]

[node name="Quit" type="TextureButton" parent="Game_Over_Popup" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 152.0
margin_top = 171.0
margin_right = 311.0
margin_bottom = 211.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 16 )
_sections_unfolded = [ "Textures" ]

[connection signal="area_entered" from="Ball/Area2D" to="Ball/Area2D" method="_on_Area2D_area_entered"]

[connection signal="pressed" from="Controls/Right_Arrow" to="Map_Pivot_Point" method="_on_right_arrow_pressed"]

[connection signal="pressed" from="Controls/Left_Arrow" to="Map_Pivot_Point" method="_on_left_arrow_pressed"]

[connection signal="pressed" from="Controls/Pause_Button" to="." method="_on_Pause_Button_pressed"]

[connection signal="pressed" from="Pause_Popup/Controls/Resume" to="." method="_on_Resume_pressed"]

[connection signal="pressed" from="Pause_Popup/Controls/Quit" to="." method="_on_Quit_pressed"]

[connection signal="pressed" from="Pause_Popup/Settings/Settings_Popup/Back" to="." method="_on_Back_pressed"]

[connection signal="pressed" from="Pause_Popup/Settings/Settings" to="." method="_on_Settings_pressed"]

[connection signal="pressed" from="Game_Over_Popup/Replay" to="." method="_on_Replay_pressed"]

[connection signal="pressed" from="Game_Over_Popup/Quit" to="." method="_on_Quit_pressed"]


[editable path="Pause_Popup/Settings"]
